css/main.css
/* ... */
    @media (max-width: 1024px) {
      .banner-content h1 {
        letter-spacing: 5px; } }
    @media (max-width: 414px) {
      .banner-content h1 {
        font-size: 30px; } }
  .banner-content hr {
    border-color: rgba(255, 255, 255, 0.4);
    max-width: 400px; }
  .banner-content .breadcrmb a {
    color: #ffffff; }
    .banner-content .breadcrmb a:hover {
      color: #F88C8C; }
  .banner-content .breadcrmb span {
    color: #ffffff;
    font-weight: 600;
    margin: 0 10px; }
  .banner-content p {
    font-size: 18px;
    /* text-transform: uppercase; */
    padding-top: 8px; }

/* End Banner Area
============================================================================================ */
/* Start About Area css
============================================================================================ */
@media (max-width: 991px) {
  .about-area .section-title {
    padding-top: 60px; } }

.about-accomplish h1{
    font-size: 50px;
    font-family: "Avenir-Next", sans-serif;
    letter-spacing: 3px;
}

.about-accomplish h3{
    font-family: "Avenir-Next", sans-serif;
}

.fa-accomplish-icon{
  font-size: 60px;
  color: #D1D1D1;
  padding-top: 20px;
}

.single-team-member{
  text-align: center;
  margin-top: 15px;
  display: none;
} 
.single-team-member .proff{
  padding-top: 15px;
  padding-left: 15px;
  text-align: center;
  color: #000000;
}
.single-team-member h4{
  color: #000000;
  font-weight: bold;
}
.single-team-member a{
  color: #000000;
  font-weight: bold;
}
.single-team-member p{
  color: #000000;
}

/* The "show" class is added to the filtered elements */
.show {
  display: block;
}

/* Style the buttons */
.btn {
  border: none;
  outline: none;
  padding: 12px 25px;
  background-color: #FFF7F7;
  cursor: pointer;
  font-weight: bold;
  border-radius: 0;
}

/* Add a light grey underline on mouse-over */
.btn:hover {
  text-decoration: underline;
  text-underline-offset: 5px;
}

/* Add a dark background to the active button */
.btn.active {
  text-decoration: underline;
  text-decoration-color: #F88C8C;
  text-underline-offset: 5px;
}

.left-btn{
  border-bottom-left-radius: 25px;
  border-top-left-radius: 25px;
}

.right-btn{
  border-bottom-right-radius: 25px;
  border-top-right-radius: 25px;
}

/* End About Area css
============================================================================================ */
/* Menu List Area css
============================================================================================ */
.menu-area .section-title {
  /* padding-right: 55px; */
  @media (max-width: 991px) {
    .menu-area .section-title {
      padding-right: 0; } }
  @media (max-width: 767px) {
    .menu-area .section-title {
      margin-top: 60px; } }
    }

.menu-list {
  padding: 3rem;
  text-align: center; }
  @media (max-width: 991px) {
    .menu-list {
      padding: 60px 0; } }
  @media (max-width: 767px) {
    .menu-list {
      margin-top: 30px; } }

.single-menu {
  margin-bottom: 80px; }
  @media (max-width: 991px) {
    .single-menu {
      margin-bottom: 50px; } }
  .single-menu:last-child {
    margin-bottom: 0; }
  .single-menu h3 {
    font-size: 21px;
    position: relative;
    padding-bottom: 20px;
    font-style: italic;
    text-transform: uppercase;
    margin-bottom: 50px; }
    @media (max-width: 991px) {
      .single-menu h3 {
        margin-bottom: 10px; } }
    .single-menu h3:after {
      content: '';
      position: absolute;
      left: 50%;
      top: 35px;
      -webkit-transform: translate(-50%, -50%);
      -moz-transform: translate(-50%, -50%);
      -ms-transform: translate(-50%, -50%);
      -o-transform: translate(-50%, -50%);
      transform: translate(-50%, -50%);
      height: 1px;
      width: 120px;
      background: rgba(0, 0, 0, 0.2); }
  .single-menu .list li {
    padding-bottom: 35px; }
    @media (max-width: 991px) {
      .single-menu .list li {
        padding-bottom: 25px; } }
    .single-menu .list li:last-child {
      padding-bottom: 0; }
    .single-menu .list li .menu-item {
      margin-bottom: 10px;
      padding-left: 20px;
      padding-right: 20px;
      font-weight: 500;
      color: #010000; }
      @media (max-width: 420px) {
        .single-menu .list li .menu-item {
          font-size: 16px; } }
    .single-menu .list li p {
      margin: 0; }

/* End Menu List Area css
============================================================================================ */
/* Start Gallery Area css
============================================================================================ */
.gallery-area {
  padding: 30px 0 90px; }
  @media (max-width: 991px) {
    .gallery-area {
      padding: 50px 0 50px; } }

.single-gallery {
  position: relative;
  margin-bottom: 30px; }
  .single-gallery figure {
    overflow: hidden; }
    .single-gallery figure img {
      -webkit-transition: all 0.4s ease 0s;
      -moz-transition: all 0.4s ease 0s;
      -o-transition: all 0.4s ease 0s;
      transition: all 0.4s ease 0s; }
  .single-gallery .overlay {
    z-index: 2;
    -webkit-transition: all 0.4s ease 0s;
    -moz-transition: all 0.4s ease 0s;
    -o-transition: all 0.4s ease 0s;
    transition: all 0.4s ease 0s; }
  .single-gallery .icon {
    position: absolute;
    top: 30%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -moz-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    -o-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    z-index: 2;
    -webkit-transition: all 0.4s ease 0s;
    -moz-transition: all 0.4s ease 0s;
    -o-transition: all 0.4s ease 0s;
    transition: all 0.4s ease 0s;
    opacity: 0; }
/* ... */

